cmake_minimum_required(VERSION 3.22)
set(CMAKE_CXX_STANDARD 20)
project(poly_triangulation)
add_executable(main main.cpp)
add_executable(std std.cpp)
add_library(io STATIC io.cpp)
add_library(graph STATIC graph.cpp)
target_link_libraries(main graph io)
add_executable(poly_partition poly_partition.cpp)